--- a/templates/leads/lead_create.html
+++ b/templates/leads/lead_create.html
@@ -5,16 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Home</title>
+    <!-- <link rel="stylesheet" href="style.css"> -->
+    <style>
+
+    </style>
   </head>
   <body>
     <a href="/leads">Go Back to leads</a>
     <hr />
-    <h1>This is details of {{ lead.first_name }}</h1>
-    <p>Age of {{ lead.first_name }} is {{ lead.age }}</p>
-    {% if lead.agent %}  
-        <p>Agent response for lead is {{lead.agent}}</p>
-    {% else %}
-        <p>No Agent assigned yet</p>
-    {% endif %}
+    <h1>Create a new lead</h1>
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Submit</button>
+    </form>
   </body>
 </html>
