--- a/templates/leads/lead_detail.html
+++ b/templates/leads/lead_detail.html
@@ -1,23 +1,46 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home</title>
-  </head>
-  <body>
-    <a href="{% url 'leads:lead-list' %}">Go Back to leads</a>
-    <hr />
-    <h1>This is details of {{ lead.first_name }}</h1>
-    <p>Age of {{ lead.first_name }} is {{ lead.age }}</p>
-    {% if lead.agent %}  
-        <p>Agent response for lead is {{lead.agent}}</p>
-    {% else %}
-        <p>No Agent assigned yet</p>
-    {% endif %}
-    <hr />
-    <a href="{% url 'leads:lead-update' lead.pk %}">Update</a>
-    <a href="{% url 'leads:lead-delete' lead.pk %}">Delete</a>
-  </body>
-</html>
+{% extends "base.html" %}
+
+{% block content %}
+    <section class="text-gray-600 body-font overflow-hidden">
+    <div class="container px-5 py-5 mx-auto">
+        <div class="lg:w-4/5 mx-auto flex flex-wrap">
+        <div class="lg:w-1/2 w-full lg:pr-10 lg:py-6 mb-6 lg:mb-0">
+            <h2 class="text-sm title-font text-gray-500 tracking-widest">LEAD</h2>
+            <h1 class="text-gray-900 text-3xl title-font font-medium mb-4">{{ lead.first_name }} {{ lead.last_name }}</h1>
+            <div class="flex mb-4">
+                <a href="{% url 'leads:lead-detail' lead.pk %}" class="flex-grow text-indigo-500 border-b-2 border-indigo-500 py-2 text-lg px-1">Description</a>
+                <a href="{% url 'leads:lead-delete' lead.pk %}" class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1">Delete</a>
+                <a href="{% url 'leads:lead-update' lead.pk %}" class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1">Update</a>
+            </div>
+            <p class="leading-relaxed mb-4">Fam locavore kickstarter distillery. Mixtape chillwave tumeric sriracha taximy chia microdosing tilde DIY. XOXO fam inxigo juiceramps cornhole raw denim forage brooklyn. Everyday carry +1 seitan poutine tumeric. Gastropub blue bottle austin listicle pour-over, neutra jean.</p>
+            <div class="flex border-t border-gray-200 py-2">
+                <span class="text-gray-500">Age</span>
+                <span class="ml-auto text-gray-900">{{lead.age}}</span>
+            </div>
+            <div class="flex border-t border-gray-200 py-2">
+                <span class="text-gray-500">Location</span>
+                <span class="ml-auto text-gray-900">Dummy Location</span>
+            </div>
+            <div class="flex border-t border-gray-200 py-2">
+                <span class="text-gray-500">Phone</span>
+                <span class="ml-auto text-gray-900">+919103222222</span>
+            </div>
+            <div class="flex border-t border-b mb-6 border-gray-200 py-2">
+                <span class="text-gray-500">Agent</span>
+                <span class="ml-auto text-gray-900">
+                    {% if lead.agent %} 
+                        {{lead.agent}}
+                    {% else %}
+                        No Agent assigned yet
+                    {% endif %}
+
+                </span>
+            </div>
+
+        </div>
+            <img alt="ecommerce" class="lg:w-1/2 w-full lg:h-auto h-64 object-cover object-center rounded" src="https://dummyimage.com/400x400">
+        </div>
+    </div>
+    </section>
+
+{% endblock content %}
