--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home</title>
-    <!-- <link rel="stylesheet" href="style.css"> -->
+{% extends "base.html" %}
+
+{% block content %}
     <style>
         .lead {
             padding: 10px 6px;
@@ -14,9 +9,7 @@
             width: 100%;
         }
     </style>
-  </head>
-  <body>
-    <a href="{% url 'leads:lead-create' %}">Create a new lead</a>
+    <!-- <a href="{% url 'leads:lead-create' %}">Create a new lead</a>
     <hr />
     <h1>This is all our leads</h1>
     {% for lead in leads %}
@@ -28,6 +21,49 @@
             &nbsp;
             Age: {{ lead.age }}
         </div>
-    {% endfor %}
-  </body>
-</html>
+    {% endfor %} -->
+    
+    <section class="text-gray-600 body-font">
+        <div class="container px-5 mx-auto flex flex-wrap">
+            <div class="w-full mb-6 py-6 flex flex justify-between items-center border-b border-gray-200">
+                <div>
+                    <h1 class="text-4xl text-gray-800">Leads</h1>
+                </div>
+                <div>
+                    <a class="text-gray-500 hover:text-blue" href="{% url 'leads:lead-create' %}">Create a new lead</a>
+                </div>
+            </div>
+            <div class="flex flex-wrap -m-4">
+                {% for lead in leads %}
+                    <div class="p-4 md:w-1/3">
+                        <div class="flex rounded-lg h-full bg-gray-100 p-8 flex-col">
+                            <div class="flex items-center mb-3">
+                                <div class="w-8 h-8 mr-3 inline-flex items-center justify-center rounded-full bg-indigo-500 text-white flex-shrink-0">
+                                <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+                                    <path d="M22 12h-4l-3 9L9 3l-3 9H2"></path>
+                                </svg>
+                                </div>
+                                <h2 class="text-gray-900 text-lg title-font font-medium">
+                                    {{ lead.first_name }}
+                                    {{ lead.last_name }}
+                                </h2>
+                            </div>
+                            <div class="flex-grow">
+                                <p class="leading-relaxed text-base">
+                                    Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy. Gastropub indxgo juice poutine.
+                                </p>
+                                <a href="{% url 'leads:lead-detail' lead.pk %}" class="mt-3 text-indigo-500 inline-flex items-center">Go to Details
+                                  <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
+                                    <path d="M5 12h14M12 5l7 7-7 7"></path>
+                                  </svg>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+                
+            </div>
+        </div>
+    </section>
+
+{% endblock content %}
