--- a/templates/leads/lead_update.html
+++ b/templates/leads/lead_update.html
@@ -1,23 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home</title>
-    <!-- <link rel="stylesheet" href="style.css"> -->
-    <style>
+{% extends "base.html" %}
 
-    </style>
-  </head>
-  <body>
-    <a href="{% url 'leads:lead-list'%}">Go Back to leads</a>
-    <hr />
-    <h1>Update lead: {{ lead.first_name }} {{ lead.last_name }}</h1>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Submit</button>
-    </form>
-  </body>
-</html>
+{% block content %}
+    <section class="text-gray-600 body-font overflow-hidden">
+        <div class="container px-5 py-5 mx-auto">
+            <div class="lg:w-4/5 mx-auto flex flex-wrap">
+            <div class="lg:w-1/2 w-full lg:pr-10 lg:py-6 mb-6 lg:mb-0">
+                <h2 class="text-sm title-font text-gray-500 tracking-widest">LEAD</h2>
+                <h1 class="text-gray-900 text-3xl title-font font-medium mb-4">{{ lead.first_name }} {{ lead.last_name }}</h1>
+
+                <div class="flex mb-4">
+                    <a href="{% url 'leads:lead-detail' lead.pk %}" class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1">Description</a>
+                    <a href="{% url 'leads:lead-delete' lead.pk %}" class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1">Delete</a>
+                    <a href="{% url 'leads:lead-update' lead.pk %}" class="flex-grow text-indigo-500 border-b-2 border-indigo-500 py-2 text-lg px-1">Update</a>
+                </div>
+
+                <form method="post">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <button type="submit" class="h-10 bg-blue-900 px-10 border-1 inline-flex items-center justify-center text-gray-100 mt-4">
+                        Submit
+                    </button>
+                </form>
+    
+            </div>
+                <img alt="ecommerce" class="lg:w-1/2 w-full lg:h-auto h-64 object-cover object-center rounded" src="https://dummyimage.com/400x400">
+            </div>
+        </div>
+    </section>
+{% endblock content %}
