--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -5,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>DJCRM</title>
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
@@ -13,5 +16,6 @@
         {% block content %}
         {% endblock %}
     </div>
+    {% include "scripts.html" %}
   </body>
 </html>
