--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -6,15 +6,24 @@
       </svg>
       <span class="ml-3 text-xl">DJCRM</span>
     </a>
-    <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400 flex flex-wrap items-center text-base justify-center">
-        <a href="{% url 'leads:lead-list' %}" class="mr-5 hover:text-gray-900">Leads</a>
-        <a href="" class="mr-5 hover:text-gray-900">Signup</a>
-    </nav>
-    <a href='' class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">
-        Login
-      <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
-        <path d="M5 12h14M12 5l7 7-7 7"></path>
-      </svg>
-    </a>
+    {% if request.user.is_authenticated %}
+        <nav class="md:ml-auto flex flex-wrap items-center text-base w-100 justify-between">
+            <h2 class="inline-flex items-center py-1 px-3 text-base mt-4 md:mt-0">
+                You are logged in: {{ request.user.username }}
+            </h2>
+            <a href="{% url 'leads:lead-list' %}" class="mr-3 inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">Leads</a>
+            <a href="{% url 'logout' %}" class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">Logout</a>
+        </nav>        
+    {% else %}
+        <nav class="md:ml-auto flex flex-wrap items-center text-base w-100 justify-between">
+            <a href='{% url "signup" %}' class="mr-4 inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">Signup</a>
+        </nav>
+        <a href='{% url "login" %}' class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">
+            Login
+        <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
+            <path d="M5 12h14M12 5l7 7-7 7"></path>
+        </svg>
+        </a>
+    {% endif %}
   </div>
 </header>
