--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,13 @@
     <title>DJCRM</title>
     <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        input{
+            background: #f1f1f1 !important;
+            border: 1px solid gray !important;
+            border-radius: 3px !important;
+        }
+    </style>
   </head>
   <body>
     <div class="max-w-7xl mx-auto">
