--- a/templates/agents/agent_list.html
+++ b/templates/agents/agent_list.html
@@ -1,20 +1,18 @@
 {% extends "base.html" %}
 
-{% block content %}    
+{% block content %}   
     <section class="text-gray-600 body-font">
         <div class="container px-5 mx-auto flex flex-wrap">
             <div class="w-full mb-6 py-6 flex flex justify-between items-center border-b border-gray-200">
                 <div>
-                    <h1 class="text-4xl text-gray-800">Leads</h1>
+                    <h1 class="text-4xl text-gray-800">Agents</h1>
                 </div>
-                {% if request.user.is_organizer %}
-                    <div>
-                        <a class="text-gray-500 hover:text-blue" href="{% url 'leads:lead-create' %}">Create a new lead</a>
-                    </div>
-                {% endif %}
+                <div>
+                    <a class="text-gray-500 hover:text-blue" href="{% url 'agents:agent-create' %}">Create a new agent</a>
+                </div>
             </div>
             <div class="flex flex-wrap -m-4">
-                {% for lead in leads %}
+                {% for agent in agents %}
                     <div class="p-4 md:w-1/3">
                         <div class="flex rounded-lg h-full bg-gray-100 p-8 flex-col">
                             <div class="flex items-center mb-3">
@@ -24,19 +22,18 @@
                                 </svg>
                                 </div>
                                 <h2 class="text-gray-900 text-lg title-font font-medium">
-                                    {{ lead.first_name }}
-                                    {{ lead.last_name }}
+                                    {{ agent.user.username }}
                                 </h2>
                             </div>
                             <div class="flex-grow">
                                 <p class="leading-relaxed text-base">
                                     Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy. Gastropub indxgo juice poutine.
                                 </p>
-                                <a href="{% url 'leads:lead-detail' lead.pk %}" class="mt-3 text-indigo-500 inline-flex items-center">Go to Details
-                                  <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
-                                    <path d="M5 12h14M12 5l7 7-7 7"></path>
-                                  </svg>
-                                </a>
+                                <a href="{% url 'agents:agent-detail' agent.pk %}" class="mt-3 text-indigo-500 inline-flex items-center">Go to Details
+                                    <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
+                                      <path d="M5 12h14M12 5l7 7-7 7"></path>
+                                    </svg>
+                                  </a>
                             </div>
                         </div>
                     </div>
