--- a/templates/agents/agent_update.html
+++ b/templates/agents/agent_update.html
@@ -5,15 +5,13 @@
         <div class="container px-5 py-5 mx-auto">
             <div class="lg:w-4/5 mx-auto flex flex-wrap">
             <div class="lg:w-1/2 w-full lg:pr-10 lg:py-6 mb-6 lg:mb-0">
-                <h2 class="text-sm title-font text-gray-500 tracking-widest">LEAD</h2>
-                <h1 class="text-gray-900 text-3xl title-font font-medium mb-4">{{ lead.first_name }} {{ lead.last_name }}</h1>
+                <h2 class="text-sm title-font text-gray-500 tracking-widest">Agent</h2>
+                <h1 class="text-gray-900 text-3xl title-font font-medium mb-4">{{ agent.user.username }}</h1>
 
                 <div class="flex mb-4">
-                    <a href="{% url 'leads:lead-detail' lead.pk %}" class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1">Description</a>
-                    {% if request.user.is_organizer %}
-                        <a href="{% url 'leads:lead-delete' lead.pk %}" class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1">Delete</a>
-                        <a href="{% url 'leads:lead-update' lead.pk %}" class="flex-grow text-indigo-500 border-b-2 border-indigo-500 py-2 text-lg px-1">Update</a>
-                    {% endif %}
+                    <a href="{% url 'agents:agent-detail' agent.pk %}" class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1">Description</a>
+                    <a href="{% url 'agents:agent-update' agent.pk %}" class="flex-grow text-indigo-500 border-b-2 border-indigo-500 py-2 text-lg px-1">Update</a>
+                    <a href="{% url 'agents:agent-delete' agent.pk %}" class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1">Delete</a>
                 </div>
 
                 <form method="post">
