--- a/templates/leads/assign_agent.html
+++ b/templates/leads/assign_agent.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+{% load tailwind_filters %}
+
 
 {% block content %}
 
@@ -12,13 +14,16 @@
                     Assign an Agent to this lead.
                 </h2>
 
-                <form method="post">
-                    {% csrf_token %}
-                    {{ form.as_p }}
-                    <button type="submit" class="h-10 bg-blue-900 px-10 border-1 inline-flex items-center justify-center text-gray-100 mt-4">
-                        Submit
-                    </button>
-                </form>
+                <div class="max-w-lg mx-auto">  
+
+                    <form method="post" class="mt-5">
+                        {% csrf_token %}
+                        {{ form|crispy }}
+                        <button type="submit" class="text-white w-full bg-blue-500 hover:bg-blue-600 px-3 py-2 rounded-md">
+                            Submit
+                        </button>
+                    </form>
+                </div>
         </div>
     </section>
 {% endblock content %}
