--- a/templates/leads/lead_create.html
+++ b/templates/leads/lead_create.html
@@ -1,21 +1,26 @@
 {% extends "base.html" %}
+{% load tailwind_filters %}
+
 
 {% block content %}
 
-    <section class="text-gray-600 body-font overflow-hidden">
-        <a href="{% url 'leads:lead-list' %}">Go Back to leads</a>
-        <div class="container px-5 py-5 mx-auto">
-            <div class="lg:w-4/5 mx-auto flex flex-wrap">
-            <div class="lg:w-1/2 w-full lg:pr-10 lg:py-6 mb-6 lg:mb-0">
-                <h2 class="text title-font text-gray-500 tracking-widest mb-5">Create a new lead</h2>
-
-                <form method="post">
-                    {% csrf_token %}
-                    {{ form.as_p }}
-                    <button type="submit" class="h-10 bg-blue-900 px-10 border-1 inline-flex items-center justify-center text-gray-100 mt-4">
-                        Submit
-                    </button>
-                </form>
+    <div class="max-w-lg mx-auto">  
+        <div class="mb-5 py-5 border-b border-gray-200">
+            <a 
+                class="hover:text-blue-500 mt-3"
+                href="{% url 'leads:lead-list' %}"
+            >
+                Go Back to all leads
+            </a>
         </div>
-    </section>
+        <h1 class="text-4xl text-gray-800">Create a new lead</h1>
+        <form method="post" class="mt-5">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <button type="submit" class="text-white w-full bg-blue-500 hover:bg-blue-600 px-3 py-2 rounded-md">
+                Submit
+            </button>
+        </form>
+    </div>
+
 {% endblock content %}
