--- a/templates/leads/lead_delete.html
+++ b/templates/leads/lead_delete.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+{% load tailwind_filters %}
+
 
 {% block content %}
 
@@ -7,15 +9,19 @@
         <div class="container px-5 py-5 mx-auto">
             <div class="lg:w-4/5 mx-auto flex flex-wrap">
             <div class="lg:w-1/2 w-full lg:pr-10 lg:py-6 mb-6 lg:mb-0">
-                <h2 class="text title-font text-gray-500 tracking-widest mb-5">Are u sure you want to delete this lead</h2>
+                <h2 class="text title-font text-gray-500 tracking-widest mb-5">Are u sure you want to delete this lead ?</h2>
 
-                <form method="post">
-                    {% csrf_token %}
-                    {{ form.as_p }}
-                    <button type="submit" class="h-10 bg-blue-900 px-10 border-1 inline-flex items-center justify-center text-gray-100 mt-4">
-                        Submit
-                    </button>
-                </form>
+                <div class="max-w-lg mx-auto">  
+
+                    <form method="post" class="mt-5">
+                        {% csrf_token %}
+                        {{ form|crispy }}
+                        <button type="submit" class="text-white w-full bg-blue-500 hover:bg-blue-600 px-3 py-2 rounded-md">
+                            Delete
+                        </button>
+                    </form>
+                </div>
         </div>
     </section>
+    
 {% endblock content %}
