--- a/templates/leads/lead_update.html
+++ b/templates/leads/lead_update.html
@@ -1,33 +1,41 @@
 {% extends "base.html" %}
+{% load tailwind_filters %}
+
 
 {% block content %}
-    <section class="text-gray-600 body-font overflow-hidden">
-        <div class="container px-5 py-5 mx-auto">
-            <div class="lg:w-4/5 mx-auto flex flex-wrap">
-            <div class="lg:w-1/2 w-full lg:pr-10 lg:py-6 mb-6 lg:mb-0">
-                <h2 class="text-sm title-font text-gray-500 tracking-widest">LEAD</h2>
-                <h1 class="text-gray-900 text-3xl title-font font-medium mb-4">{{ lead.first_name }} {{ lead.last_name }}</h1>
 
-                <div class="flex mb-4">
-                    <a href="{% url 'leads:lead-detail' lead.pk %}" class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1">Description</a>
-                    <a href="{% url 'leads:lead-category-update' lead.pk %}" class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1">Category</a>
-                    {% if request.user.is_organizer %}
-                        <a href="{% url 'leads:lead-delete' lead.pk %}" class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1">Delete</a>
-                        <a href="{% url 'leads:lead-update' lead.pk %}" class="flex-grow text-indigo-500 border-b-2 border-indigo-500 py-2 text-lg px-1">Update</a>
-                    {% endif %}
-                </div>
+<div class="container px-5 py-5 mx-auto">
+    <div class="lg:w-4/5 mx-auto flex flex-wrap">
+        <div class="lg:w-1/2 w-full lg:pr-10 lg:py-6 mb-6 lg:mb-0">
+            <h2 class="text-sm title-font text-gray-500 tracking-widest">LEAD</h2>
+            <h1 class="text-gray-900 text-3xl title-font font-medium mb-4">{{ lead.first_name }} {{ lead.last_name }}</h1>
 
-                <form method="post">
+            <div class="flex mb-4">
+                <a href="{% url 'leads:lead-detail' lead.pk %}" class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1">Description</a>
+                <a href="{% url 'leads:lead-category-update' lead.pk %}" class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1">Category</a>
+                {% if request.user.is_organizer %}
+                    <a href="{% url 'leads:lead-delete' lead.pk %}" class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1">Delete</a>
+                    <a href="{% url 'leads:lead-update' lead.pk %}" class="flex-grow text-indigo-500 border-b-2 border-indigo-500 py-2 text-lg px-1">Update</a>
+                {% endif %}
+            </div>
+
+            <div class="max-w-lg mx-auto">  
+
+                <form method="post" class="mt-5">
                     {% csrf_token %}
-                    {{ form.as_p }}
-                    <button type="submit" class="h-10 bg-blue-900 px-10 border-1 inline-flex items-center justify-center text-gray-100 mt-4">
+                    {{ form|crispy }}
+                    <button type="submit" class="text-white w-full bg-blue-500 hover:bg-blue-600 px-3 py-2 rounded-md">
                         Submit
                     </button>
                 </form>
-    
+            </div>
+
             </div>
                 <img alt="ecommerce" class="lg:w-1/2 w-full lg:h-auto h-64 object-cover object-center rounded" src="https://dummyimage.com/400x400">
             </div>
+            
         </div>
-    </section>
+    </div>
+</div>
+
 {% endblock content %}
