--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,14 +1,35 @@
 {% extends "base.html" %}
+{% load tailwind_filters %}
+
 
 {% block content %}
     
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="h-10 bg-blue-900 px-10 border-1 inline-flex items-center justify-center text-gray-100 mt-4">Login</button>
-        <hr />
-        <br />
-        <a href="{%url 'reset-password' %}">Forgot Password</a>
-    </form>
+    <div class="max-w-lg mx-auto">
+
+        <div class="mt-5 py-5 border-b border-gray-200">
+            <a 
+                class="hover:text-blue-500 mt-3"
+                href="{%url 'signup' %}"
+            >
+                Don't have an account?
+            </a>
+        </div>
+
+        <form method="post" class="mt-5">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <button type="submit" class="text-white w-full bg-blue-500 hover:bg-blue-600 px-3 py-2 rounded-md">
+                Login
+            </button>
+        </form>
+        <div class="mt-5 py-5 border-t border-gray-200">
+            <a 
+                class="hover:text-blue-500 mt-3"
+                href="{%url 'reset-password' %}">
+                Forgot Password
+            </a>
+        </div>
+    </div>
+
 
 {% endblock %}
